Open debug console automatically when session starts

--- a/qtdev/vscode_templates/launch.json
+++ b/qtdev/vscode_templates/launch.json
@@ -12,6 +12,7 @@
             "request": "launch",
             "program": "$BUILD/$PROJECT.app/Contents/MacOS/$PROJECT",
             "args": [],
+            "internalConsoleOptions": "openOnSessionStart",
             "environment": [
                 {
                     "name": "DYLD_IMAGE_SUFFIX",
