Clean up a bunch of stuff for using top-level builds

--- a/qtdev/vscode_templates/launch.json
+++ b/qtdev/vscode_templates/launch.json
@@ -6,7 +6,7 @@
     "configurations": [
         {
             "preLaunchTask": "build",
-            "name": "LLDB Debug",
+            "name": "Debug $PROJECT",
             "MIMode": "lldb",
             "type": "cppdbg",
             "request": "launch",
@@ -24,7 +24,7 @@
                 "moduleLoad": false,
                 "programOutput": true
             },
-            "visualizerFile": "/Users/vohi/qt6.natvis",
+            "visualizerFile": "$HOME/qt/qt6.natvis",
             "showDisplayString": true,
             "cwd": "$BUILD"
         }
