Fix adding of cmake build system elements
Some of them need to be added right away, others only after qtbase has
been built.

--- a/qtdev/CMakeLists.txt
+++ b/qtdev/CMakeLists.txt
@@ -54,14 +54,18 @@ foreach(project ${subproject_list_ordered})
             list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/qtbase/cmake")
             list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/qtbase/cmake/3rdparty/extra-cmake-modules/find-modules")
             list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/qtbase/cmake/3rdparty/kwin")
-            list(APPEND CMAKE_PREFIX_PATH "${QtBase_BINARY_DIR}/lib/cmake")
-            list(APPEND CMAKE_FIND_ROOT_PATH "${QtBase_BINARY_DIR}")
         endif()
     endif()
     message(DEBUG "Adding '${project}'")
     add_subdirectory(${project})
-endforeach()
 
+    if(project STREQUAL "qtbase")
+        if (NOT QT_BUILD_STANDALONE_TESTS)
+            list(APPEND CMAKE_PREFIX_PATH "${QtBase_BINARY_DIR}/lib/cmake")
+            list(APPEND CMAKE_FIND_ROOT_PATH "${QtBase_BINARY_DIR}")
+        endif()
+    endif()
+endforeach()
 # Check for unmet dependencies
 foreach(module IN LISTS subproject_list_ordered)
     foreach(dep IN LISTS "${qt_module_prop_prefix}${module}_depends")
