--- a/qtdev/CMakeLists.txt
+++ b/qtdev/CMakeLists.txt
@@ -17,7 +17,7 @@ set(qt_module_prop_prefix "__qt_prop_")
 function(extract_projects out_project_list)
     set(project_list "")
     FILE(GLOB directories LIST_DIRECTORIES true RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)
-    foreach(directory ${directories})
+    foreach(directory IN LISTS directories)
         if(NOT IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${child})
             continue()
         endif()
@@ -49,7 +49,7 @@ if(NOT dependencies_error STREQUAL "0")
     message(FATAL_ERROR "Error ${dependencies_error} ordering dependencies: ${subproject_list_ordered}")
 endif()
 
-foreach(project ${subproject_list_ordered})
+foreach(project IN LISTS subproject_list_ordered)
     if(project STREQUAL "qtbase")
         if (NOT QT_BUILD_STANDALONE_TESTS)
             list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/qtbase/cmake")
@@ -69,18 +69,18 @@ foreach(project ${subproject_list_ordered})
 endforeach()
 
 # Check for unmet dependencies
-foreach(module IN LISTS subproject_list_ordered)
-    foreach(dep IN LISTS "${qt_module_prop_prefix}${module}_depends")
+foreach(project IN LISTS subproject_list_ordered)
+    foreach(dep IN LISTS "${qt_module_prop_prefix}${project}_depends")
         if (dep STREQUAL qtbase)
             # Always available skip
             continue()
         endif()
         if (DEFINED BUILD_${module} AND BUILD_${module})
             if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${dep}/CMakeLists.txt")
-                message(FATAL_ERROR "Module '${module} depends on '${dep}', but ${deps}'s CMakeLists.txt couldn't be found.\n")
+                message(FATAL_ERROR "Module '${project} depends on '${dep}', but ${deps}'s CMakeLists.txt couldn't be found.\n")
             endif()
             if(NOT BUILD_${dep})
-                message(FATAL_ERROR "Module '${module} depends on '${dep}', but ${deps} will not be built.\n")
+                message(FATAL_ERROR "Module '${project} depends on '${dep}', but ${deps} will not be built.\n")
             endif()
         endif()
     endforeach()
