--- a/qtdev/CMakeLists.txt
+++ b/qtdev/CMakeLists.txt
@@ -10,8 +10,8 @@ project(Qt
 )
 
 # Required so we can call ctest from the root build directory
-set_property(GLOBAL PROPERTY CTEST_TARGETS_ADDED 1)
 enable_testing()
+
 set(qt_module_prop_prefix "__qt_prop_")
 
 # Also make sure the CMake config files do not recreate the already-existing targets
@@ -20,9 +20,9 @@ if (NOT QT_BUILD_STANDALONE_TESTS)
 endif()
 set(QT_SUPERBUILD TRUE)
 
-# Populates $out_project_list with all subdirectories that have a CMake project
-function(extract_projects out_project_list)
-    set(project_list "")
+# Populates $out_module_list with all subdirectories that have a CMakeLists.txt file
+function(extract_modules out_module_list)
+    set(module_list "")
     FILE(GLOB directories LIST_DIRECTORIES true RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *)
     foreach(directory IN LISTS directories)
         if(NOT IS_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/${directory})
@@ -32,27 +32,17 @@ function(extract_projects out_project_list)
             continue()
         endif()
         if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/${directory}/CMakeLists.txt)
-            list(APPEND project_list "${directory}")
+            list(APPEND module_list "${directory}")
         endif()
     endforeach()
-    set(${out_project_list} ${project_list} PARENT_SCOPE)
+    set(${out_module_list} ${module_list} PARENT_SCOPE)
 endfunction()
 
-# Load $project and populate $out_ordered with the subprojects based on their dependencies
-# $ordered carries already sorted dependencies; $out_has_dependencies is left empty
-# if there are no dependencies, otherwise set to 1
-# Function calls itself recursively if a dependency is found that is not yet in $ordered.
-function(load_project project ordered out_ordered out_has_dependencies)
-    set(depends_file "${CMAKE_CURRENT_SOURCE_DIR}/${project}/dependencies.yaml")
-    if(NOT EXISTS ${depends_file})
-        set(${out_has_dependencies} "" PARENT_SCOPE)
-        return()
-    endif()
-    set(${out_has_dependencies} "1" PARENT_SCOPE)
+function(parse_dependencies depends_file out_dependencies)
     file(STRINGS ${depends_file} lines)
+    # poor man's yaml parser, populating $dependencies with all dependencies
     set(dependencies "")
     foreach(line IN LISTS lines)
-        # poor man's yaml parser, populating $dependencies with all dependencies
         if(line STREQUAL "dependencies:")
             set(FOUND_dependencies 1)
         endif()
@@ -61,25 +51,41 @@ function(load_project project ordered out_ordered out_has_dependencies)
         endif()
         if(line MATCHES "^  (.*):$")
             set(dependency ${CMAKE_MATCH_1})
-            # dependencies are specified with relative path to this project
+            # dependencies are specified with relative path to this module
             string(REPLACE "../" "" dependency ${dependency})
             list(APPEND dependencies ${dependency})
         endif()
     endforeach()
-    # project hasn't been seen yet, append it
-    list(FIND ordered "${project}" pindex)
+    set(${out_dependencies} ${dependencies} PARENT_SCOPE)
+endfunction()
+
+# Load $module and populate $out_ordered with the submodules based on their dependencies
+# $ordered carries already sorted dependencies; $out_has_dependencies is left empty
+# if there are no dependencies, otherwise set to 1
+# Function calls itself recursively if a dependency is found that is not yet in $ordered.
+function(load_module module ordered out_ordered out_has_dependencies)
+    set(depends_file "${CMAKE_CURRENT_SOURCE_DIR}/${module}/dependencies.yaml")
+    if(NOT EXISTS ${depends_file})
+        set(${out_has_dependencies} "" PARENT_SCOPE)
+        return()
+    endif()
+    set(${out_has_dependencies} "1" PARENT_SCOPE)
+    set(dependencies "")
+    parse_dependencies(${depends_file} dependencies)
+    # module hasn't been seen yet, append it
+    list(FIND ordered "${module}" pindex)
     if (pindex EQUAL -1)
         list(LENGTH ordered pindex)
-        list(APPEND ordered ${project})
+        list(APPEND ordered ${module})
     endif()
     foreach(dependency IN LISTS dependencies)
         list(FIND ordered "${dependency}" dindex)
         if (dindex EQUAL -1)
             # dependency hasnt' been seen yet - load it
             list(INSERT ordered ${pindex} ${dependency})
-            load_project(${dependency} "${ordered}" ordered has_dependency)
+            load_module(${dependency} "${ordered}" ordered has_dependency)
         elseif(dindex GREATER pindex)
-            # otherwise, make sure it is before project
+            # otherwise, make sure it is before module
             list(REMOVE_AT ordered ${dindex})
             list(INSERT ordered ${pindex} ${dependency})
         endif()
@@ -87,14 +93,14 @@ function(load_project project ordered out_ordered out_has_dependencies)
     set(${out_ordered} ${ordered} PARENT_SCOPE)
 endfunction()
 
-function(order_projects projects out_all_ordered)
+function(order_modules modules out_all_ordered)
     set(ordered "")
     set(no_dependencies "")
-    foreach(project IN LISTS projects)
+    foreach(module IN LISTS modules)
         set(out_ordered "")
-        load_project(${project} "${ordered}" out_ordered project_depends)
-        if(NOT project_depends)
-            list(APPEND no_dependencies ${project})
+        load_module(${module} "${ordered}" out_ordered module_depends)
+        if(NOT module_depends)
+            list(APPEND no_dependencies ${module})
         endif()
         set(ordered "${out_ordered}")
     endforeach()
@@ -102,27 +108,25 @@ function(order_projects projects out_all_ordered)
     set(${out_all_ordered} ${ordered} PARENT_SCOPE)
 endfunction()
 
-# Get subproject list if not already defined
-if (NOT BUILD_SUBPROJECTS)
-    extract_projects(BUILD_SUBPROJECTS)
+# Get submodule list if not already defined
+if (NOT BUILD_SUBMODULES)
+    extract_modules(BUILD_SUBMODULES)
 endif()
 
-order_projects("${BUILD_SUBPROJECTS}" BUILD_SUBPROJECTS)
+order_modules("${BUILD_SUBMODULES}" BUILD_SUBMODULES)
 
-message(NOTICE "Ordered Dependencies: ${BUILD_SUBPROJECTS}")
-
-foreach(project IN LISTS BUILD_SUBPROJECTS)
-    if(project STREQUAL "qtbase")
+foreach(module IN LISTS BUILD_SUBMODULES)
+    if(module STREQUAL "qtbase")
         if (NOT QT_BUILD_STANDALONE_TESTS)
             list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/qtbase/cmake")
             list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/qtbase/cmake/3rdparty/extra-cmake-modules/find-modules")
             list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/qtbase/cmake/3rdparty/kwin")
         endif()
     endif()
-    message(DEBUG "Adding '${project}'")
-    add_subdirectory(${project})
+    message(DEBUG "Adding '${module}'")
+    add_subdirectory(${module})
 
-    if(project STREQUAL "qtbase")
+    if(module STREQUAL "qtbase")
         if (NOT QT_BUILD_STANDALONE_TESTS)
             list(APPEND CMAKE_PREFIX_PATH "${QtBase_BINARY_DIR}/lib/cmake")
             list(APPEND CMAKE_FIND_ROOT_PATH "${QtBase_BINARY_DIR}")
@@ -131,25 +135,26 @@ foreach(project IN LISTS BUILD_SUBPROJECTS)
 endforeach()
 
 # Check for unmet dependencies
-foreach(project IN LISTS BUILD_SUBPROJECTS)
-    add_custom_target(${project}_src COMMAND ${CMAKE_COMMAND} --build . --parallel --target ${project}/src/all USES_TERMINAL)
-    add_custom_target(${project}_all COMMAND ${CMAKE_COMMAND} --build . --parallel --target ${project}/all USES_TERMINAL)
-    add_custom_target(${project}_clean COMMAND ${CMAKE_COMMAND} --build . --parallel --target ${project}/clean USES_TERMINAL)
-    foreach(dep IN LISTS "${qt_module_prop_prefix}${project}_depends")
+foreach(module IN LISTS BUILD_SUBMODULES)
+    add_custom_target(${module}_src COMMAND ${CMAKE_COMMAND} --build . --parallel --target ${module}/src/all USES_TERMINAL)
+    add_custom_target(${module}_all COMMAND ${CMAKE_COMMAND} --build . --parallel --target ${module}/all USES_TERMINAL)
+    add_custom_target(${module}_clean COMMAND ${CMAKE_COMMAND} --build . --parallel --target ${module}/clean USES_TERMINAL)
+    foreach(dep IN LISTS "${qt_module_prop_prefix}${module}_depends")
         if (dep STREQUAL qtbase)
             # Always available skip
             continue()
         endif()
-        if (DEFINED BUILD_${project} AND BUILD_${project})
+        if (DEFINED BUILD_${module} AND BUILD_${module})
             if(NOT EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/${dep}/CMakeLists.txt")
-                message(FATAL_ERROR "Module '${project} depends on '${dep}', but ${deps}'s CMakeLists.txt couldn't be found.\n")
+                message(FATAL_ERROR "Module '${module} depends on '${dep}', but ${deps}'s CMakeLists.txt couldn't be found.\n")
             endif()
             if(NOT BUILD_${dep})
-                message(FATAL_ERROR "Module '${project} depends on '${dep}', but ${deps} will not be built.\n")
+                message(FATAL_ERROR "Module '${module} depends on '${dep}', but ${deps} will not be built.\n")
             endif()
         endif()
     endforeach()
 endforeach()
+
 
 if(NOT QT_BUILD_STANDALONE_TESTS)
     # Display a summary of everything
